# cto-app

./: .actrc  .gitignore  .gitlab-ci.yml  .mcp.json  .yamllint.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  skills-lock.json
.claude/: launch.json
.cursor/rules/: karpathy-guidelines.mdc  meta-principal-architect.mdc
.github/: copilot-instructions.md
.github/workflows/: chart-ci.yml  ci.yml  mirror-to-gitlab.yml  morgan-qdrant-smoke.yml  publish-chart.yml  release.yml  seed-to-5dlabsinc.yml  smoke-test.yml  sync-outbound.yml  tauri-e2e.yml
.gitops/apps/: README.md  cto.yaml  morgan.yaml  observability.yaml  origin-standard.yaml  qdrant.yaml  voice-bridge.yaml
.hermes/artifacts/: 2026-05-02T21-49-40-041Z-morgan-source-install-actions-live.html  2026-05-02T21-49-40-041Z-morgan-source-install-actions-live.json  2026-05-02T21-54-28-280Z-morgan-source-install-actions-live.html  2026-05-02T21-54-28-280Z-morgan-source-install-actions-live.json
.hermes/plans/: 2026-05-02_164540-morgan-source-four-option-gitops.md  2026-05-02_5d-origin-managed-source-strategy.md  2026-05-02_source-provider-licensing-branding-research.md
.hermes/tmp/: append-cron-status-20260504-044156.py  capture-first-screen-prep.mjs  capture-source-install-actions-svg.mjs  click-continue-saved-access.mjs  click-prepare-retry.mjs  click-saved-to-cloudflare.mjs  continue-from-clis.mjs  cron-status-2026-05-04-065500.md  demo-flow-live-verify.mjs  demo-flow-probe.mjs  dogfood-click-first-screens.mjs  dogfood-click-report.json  dogfood-first-screens-report.json  dogfood-first-screens.mjs  dogfood-postfix-media.mjs  dogfood-postfix-report.json  drive-morgan-clis-verify.mjs  fast-demo-verification.mjs  generate_setup_morgan_mp3.py  go-setup-beginning.mjs  go-to-saved-access.mjs  inspect-300-rules.mjs  inspect-content-rules.mjs  inspect-cssom-grid.mjs  inspect-final.mjs  inspect-first-three.mjs  inspect-main-style.mjs  inspect-rule-order.mjs  inspect-saved-access-live.mjs  inspect-source-feature-flag.mjs  inspect-source-polish.mjs  inspect-style-tag-snippet.mjs  (+34 more)
docs/: handoff-local-stack-setup.md
e2e/: README.md
scripts/: build-handmade-origin-glyph-preview.mjs  build-origin-icon-preview.mjs  build-source-colour-scheme-preview.mjs  cleanup-local-stack.sh  download-scenario-assets.mjs  find-scenario-boardylabs-assets.mjs  generate-already-set-assets.mjs  generate-already-set-mp4.mjs  generate-morgan-cloudflare-condition-videos.mjs  generate-morgan-conditional-mp3s.mjs  generate-morgan-conditional-transcripts.mjs  generate-morgan-cue-mp3.mjs  generate-morgan-saved-access-condition-videos.mjs  generate-morgan-saved-access.mjs  generate-morgan-scenario-videos.mjs  generate-origin-glyph-scenario.mjs  generate-origin-icon-no-text-scenario.mjs  generate-origin-icon-scenario.mjs  generate-retry-video.mjs  mcp-scenario-server.mjs  mcp-scenario-smoke.mjs  poll-scenario-job.mjs  probe-scenario-asset-urls.mjs  probe-scenario-assets-pages.mjs  probe-scenario-assets-sample.mjs  probe-scenario-avatar-models.mjs  probe-scenario-icon-api-recommendation.mjs  probe-scenario-icon-model-selection.mjs  probe-scenario-icon-models.mjs  probe-scenario-model-details.mjs  run-morgan-avatar-ab.mjs  run-morgan-intro-lipsync-offset-ab.mjs  run-morgan-motion-prompt-ab.mjs  sync-openclaw-provider-svgs.mjs  wait-download-morgan-scenario-screens.mjs  wait-seedance-reference-audio.mjs  wait-seedance-verbatim.mjs  wait-seedance-voice-lock-generate-audio.mjs  wait-seedance-voice-lock.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: bootstrap.rs  lib.rs  main.rs  scm_auth.rs  secret_source_sdk_bridge.mjs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+388 files in other folders)
